--- a/frontend/style.css
+++ b/frontend/style.css
@@ -44,6 +44,16 @@ h1 {
     margin-right: 5px;
 }
 
+.notes {
+    justify-content: center;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    align-items: center;
+    margin-top: 10px;
+    padding: 5px;
+    text-align: center;
+}
+
 .file {
     display: flex;
     justify-content: space-between;
