--- a/frontend/style.css
+++ b/frontend/style.css
@@ -69,6 +69,42 @@ h1 {
     background-color: #f5f5f5;
 }
 
+#viewer-file-name {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#image-viewer {
+    width: 100%;
+    display: block;
+    user-select: none;
+}
+
+#image-viewer img {
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+}
+
+#text-viewer {
+    width: 100%;
+    display: block;
+}
+
+#text-viewer #text-viewer-txt {
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    padding: 5px;
+    user-select: text;
+    cursor: text;
+}
+
 .drop-zone {
     border: 2px dashed #888;
     border-radius: 8px;
@@ -107,7 +143,7 @@ h1 {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    color: #fff;
+    color: #000;
     font-weight: bold;
     line-height: 20px;
     font-size: small;
