--- a/frontend/style.css
+++ b/frontend/style.css
@@ -78,9 +78,15 @@ h1 {
     background-color: #f5f5f5;
 }
 
+#viewers {
+    border: 1px solid #ddd;
+    padding: 5px;
+    border-radius: 4px;
+}
+
 #viewer-file-name {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 #image-viewer {
